# datapine

./: Pipfile  README.md  cli.py  datapine.kv  main.py  pyproject.toml
operators/: db_connection.py  sqlite_operator.py
sample_pj/export/: export.sql
sample_pj/sqls/: 0.delete.sql  1.create.sql
src/datapine/: cli.py
src/datapine/operators/: db_connection.py  sqlite_operator.py
