[tool.poetry]
name = "datapine"
version = "0.1.1"
description = ""
authors = ["Yujikawa <ykyujikawa@gmail.com>"]
license = "Apache2.0"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.2"
fire = "^0.4.0"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
datapine = "datapine.cli:main"